styling fix for body container of all notes, new scrollbar and new ParentAppGrid component

--- a/client/src/components/AllNotes.module.css
+++ b/client/src/components/AllNotes.module.css
@@ -1,5 +1,6 @@
 .all_notes {
   position: relative;
+  height: 100%;
 }
 
 .welcome__text {
